--- a/aboutus/css/aboutus.css
+++ b/aboutus/css/aboutus.css
@@ -1,7 +1,3 @@
-.transparent {
-	opacity: 0.80;
-}
-
 .aboutus {
-	background: url(../image/kbce_logo.PNG) no-repeat left top;
+	background: url(../image/kbce_logo.PNG) no-repeat left top fixed;
 }
