--- a/aboutus/css/aboutus.css
+++ b/aboutus/css/aboutus.css
@@ -1,3 +1,3 @@
 .aboutus {
-	background: url(../image/kbce_logo.PNG) no-repeat left top fixed;
+	background: url(../image/kbce_logo.PNG) no-repeat left top;
 }
